example/base/svc.yaml
# kubernetes/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    app: example
  ports:
    - name: http
      port: 80
      targetPort: http
