example/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: power.local.gd
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 80
        path: /task
        pathType: Prefix
  tls:
    - hosts:
      - power.local.gd
      secretName: tls-secret
